# frozenlist

./: .appveyor.yml  .cherry_picker.toml  .codecov.yml  .coveragerc  .gitignore  .lgtm.yml  .mypy.ini  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGES.rst  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.rst  ci.txt  codecov.yml  mypy.ini  pyproject.toml  pytest.ci.ini  pytest.ini  requirements.txt  setup.cfg  setup.py  towncrier.toml  tox.ini
.azure-pipelines/: ci.yml  deploy-matrix.yml  deploy.yml  stage-deploy.yml  stage-lint.yml  stage-test-steps.yml  stage-test.yml
.azure-pipelines/templates/: stage-test-steps.yml  stage-test.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  actionlint.yml  codeql.yml  config.yml  dependabot.yml
.github/actions/cache-keys/: action.yml
.github/actions/cache-pip-deps/: action.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  python_-m_pip_install_frozenlist.yml  python_3_11-dev.yml  reusable-build-wheel.yml  reusable-cibuildwheel.yml  reusable-linters.yml
CHANGES/: .TEMPLATE.rst  136.feature  172.feature  24.removal  327.misc  342.bugfix  410.misc  411.bugfix  41591f2.packaging.rst  433.misc  553.feature  553.packaging.rst  560.contrib.rst  560.packaging.rst  561.contrib.rst  563.contrib.rst  564.contrib.rst  567.bugfix.rst  571.bugfix.rst  573.doc.rst  573.packaging.rst  577.packaging.rst  595.packaging.rst  596.misc.rst  622.contrib.rst  636.contrib.rst  639.packaging.rst  644.packaging.rst  649.misc  649.packaging  650.contrib  653.bugfix.rst  659.feature.rst  660.packaging.rst  661.packaging.rst  666.feature.rst  677.contrib.rst  681.contrib.rst  682.contrib.rst  685.feature.rst  (+21 more)
docs/: Makefile  changes.rst  conf.py  index.rst  make.bat  spelling_wordlist.txt
docs/contributing/: release_guide.rst
frozenlist/: __init__.pxd  __init__.py  __init__.pyi  _frozenlist.cpp  _frozenlist.pxd  _frozenlist.pyx  frozenlist.c  frozenlist.py
frozenlist/_frozenlib/: compat.h  fl_atomics.h  frozenlist_object.h  state.h
packaging/pep517_backend/: _backend.py  _compat.py  _cython_configuration.py  _transformers.py
requirements/: ci-freethreading.txt  ci-pure.txt  ci-wheel.txt  ci.txt  dev.txt  doc.txt  flake.txt  lint.txt  test-pure.txt  test.txt  wheel.txt
tests/: conftest.py  test_frozenlist.py  test_pep517_backend.py
tools/: build-wheels.sh  upgrade_pythoncapi.py
