[build-system]
requires = [
    "setuptools >= 46.4.0", "wheel >= 0.37.0",
]
build-backend = "setuptools.build_meta"

[tool.towncrier]
package = "frozenlist"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
template = "CHANGES/.TEMPLATE.rst"
issue_format = "`#{issue} <https://github.com/aio-libs/frozenlist/issues/{issue}>`_"

[tool.cibuildwheel]
# test-requires = "-r requirements/ci-wheel.txt"
# test-command = "pytest {project}/tests"

# don't build PyPy wheels, install from source instead
skip = "pp*"
