[build-system]
requires = [
  # NOTE: The following build dependencies are necessary for initial
  # NOTE: provisioning of the in-tree build backend located under
  # NOTE: `packaging/pep517_backend/`.
  # setuptools >= 67.0 required for Python 3.12+ support
  # Next step should be >= 77.0 for PEP 639 support
  # Don't bump too early to give distributors time to update
  # their setuptools version.
  "expandvars",
  "setuptools >= 67.0",
  "tomli; python_version < '3.11'",
]
backend-path = ["packaging"]  # requires `pip >= 20` or `pep517 >= 0.6.0`
build-backend = "pep517_backend.hooks"  # wraps `setuptools.build_meta`

[project]
name = "frozenlist"
license = {text = "Apache-2.0"}
description = "A list-like structure which implements collections.abc.MutableSequence"
maintainers = [{ name = "aiohttp team", email = "team@aiohttp.org" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",

  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",

  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/aio-libs/frozenlist"
"Chat: Matrix" = "https://matrix.to/#/#aio-libs:matrix.org"
"Chat: Matrix Space" = "https://matrix.to/#/#aio-libs-space:matrix.org"
"CI: Github Actions" = "https://github.com/aio-libs/frozenlist/actions"
"Code of Conduct" = "https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md"
"Coverage: codecov" = "https://codecov.io/github/aio-libs/frozenlist"
"Docs: Changelog" = "https://github.com/aio-libs/frozenlist/blob/master/CHANGES.rst#changelog"
"Docs: RTD" = "https://frozenlist.aio-libs.org"
"GitHub: issues" = "https://github.com/aio-libs/frozenlist/issues"
"GitHub: repo" = "https://github.com/aio-libs/frozenlist"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "frozenlist.__version__" }
readme = { file = ["README.rst", "CHANGES.rst"] }

[tool.setuptools.packages.find]
include = ["frozenlist*"]

[tool.setuptools.package-data]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
"*" = ["*.so"]

[tool.setuptools.exclude-package-data]
"*" = ["*.cpp", "*.c", "*.h"]

[tool.local.cythonize]
# This attr can contain multiple globs
src = ["frozenlist/*.pyx"]

[tool.local.cythonize.env]
# Env vars provisioned during cythonize call
#CFLAGS = "-DCYTHON_TRACE=1 ${CFLAGS}"
#LDFLAGS = "${LDFLAGS}"

[tool.local.cythonize.flags]
# This section can contain the following booleans:
# * annotate — generate annotated HTML page for source files
# * build — build extension modules using distutils
# * inplace — build extension modules in place using distutils (implies -b)
# * force — force recompilation
# * quiet — be less verbose during compilation
# * lenient — increase Python compat by ignoring some compile time errors
# * keep-going — compile as much as possible, ignore compilation failures
annotate = false
build = false
inplace = true
force = true
quiet = false
lenient = false
keep-going = false

[tool.local.cythonize.kwargs]
# This section can contain args that have values:
# * exclude=PATTERN      exclude certain file patterns from the compilation
# * parallel=N    run builds in N parallel jobs (default: calculated per system)
# exclude = "**.py"
# parallel = 12

[tool.local.cythonize.kwargs.directive]
# This section can contain compiler directives. Ref:
# https://cython.rtfd.io/en/latest/src/userguide/source_files_and_compilation.html#compiler-directives
embedsignature = "True"
emit_code_comments = "True"

[tool.local.cythonize.kwargs.compile-time-env]
# This section can contain compile time env vars

[tool.local.cythonize.kwargs.option]
# This section can contain cythonize options
# Ref: https://github.com/cython/cython/blob/d6e6de9/Cython/Compiler/Options.py#L694-L730
#docstrings = "True"
#embed_pos_in_docstring = "True"
#warning_errors = "True"
#error_on_unknown_names = "True"
#error_on_uninitialized = "True"

[tool.cibuildwheel]
enable = ["cpython-freethreading"]
build-frontend = "build"
before-test = [
  # NOTE: Attempt to have pip pre-compile PyYAML wheel with our build
  # NOTE: constraints unset. The hope is that pip will cache that wheel
  # NOTE: and the test env provisioning stage will pick up PyYAML from
  # NOTE: said cache rather than attempting to build it with a conflicting.
  # NOTE: Version of Cython.
  # Ref: https://github.com/pypa/cibuildwheel/issues/1666
  "PIP_CONSTRAINT= pip install PyYAML",
]
# test-requires = "-r requirements/ci-wheel.txt"
# test-command = "pytest -v --no-cov {project}/tests"

# don't build PyPy wheels, install from source instead
skip = "pp*"

[tool.cibuildwheel.environment]
COLOR = "yes"
FORCE_COLOR = "1"
MYPY_FORCE_COLOR = "1"
PIP_CONSTRAINT = "requirements/cython.txt"
PRE_COMMIT_COLOR = "always"
PY_COLORS = "1"

[tool.cibuildwheel.config-settings]
pure-python = "false"

[tool.cibuildwheel.windows]
before-test = []  # Windows cmd has different syntax and pip chooses wheels
