[metadata]
name = frozenlist
version = attr: frozenlist.__version__
url = https://github.com/aio-libs/frozenlist
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: Github Actions = https://github.com/aio-libs/frozenlist/actions
  Coverage: codecov = https://codecov.io/github/aio-libs/frozenlist
  Docs: RTD = https://frozenlist.aio-libs.org
  GitHub: issues = https://github.com/aio-libs/frozenlist/issues
  GitHub: repo = https://github.com/aio-libs/frozenlist
description = A list-like structure which implements collections.abc.MutableSequence
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.8
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

[options.exclude_package_data]
* =
    *.c
    *.h

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
    *.so

[pep8]
max-line-length=88

[flake8]
ignore = N801,N802,N803,E226,W503,W504,E252
max-line-length=88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

known_third_party=pytest
known_first_party=frozenlist

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod

[coverage:run]
branch = True
source = frozenlist
omit = site-packages

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True

# uncomment next lines
# to enable strict mypy mode
#
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
warn_unused_ignores = True


[mypy-pytest]
ignore_missing_imports = true
