[metadata]
name = frozenlist
version = attr: frozenlist.__version__
url = https://github.com/aio-libs/frozenlist
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: Github Actions = https://github.com/aio-libs/frozenlist/actions
  Code of Conduct = https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md
  Coverage: codecov = https://codecov.io/github/aio-libs/frozenlist
  Docs: Changelog = https://github.com/aio-libs/frozenlist/blob/master/CHANGES.rst#changelog
  Docs: RTD = https://frozenlist.aio-libs.org
  GitHub: issues = https://github.com/aio-libs/frozenlist/issues
  GitHub: repo = https://github.com/aio-libs/frozenlist
description = A list-like structure which implements collections.abc.MutableSequence
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache-2.0
license_files =
  LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3.14
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.9
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

[options.exclude_package_data]
* =
    *.cpp
    *.c
    *.h

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
    *.so

[pep8]
max-line-length=88

[flake8]
extend-select = B950
ignore = E226,E252,E501,N801,N802,N803,W503,W504
max-line-length = 88

# Allow certain violations in certain files:
per-file-ignores =

  # F401   imported but unused
  packaging/pep517_backend/hooks.py: F401

[isort]
profile=black
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

known_third_party=pytest
known_first_party=frozenlist
